#4 Основное окно приложения - Попытка исправить сборку через добавление prism.fontdir