@@ -198,6 +198,7 @@
                         --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
                         --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
                         --add-exports javafx.graphics/com.sun.glass.utils=ALL-UNNAMED
+                        --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
                         ${openjfx.run.args}
                         -Dmonocle.platform=${monocle.platform}
                     </argLine>
@@ -259,7 +260,7 @@
             <properties>
                 <openjfx.run.args>
                     -Dprism.verbose=true -Dprism.order=sw
-                    -Dglass.platform=Monocle -Dprism.text=t2k
+                    -Dglass.platform=Monocle -Dprism.fontdir=" + ${JAVA_HOME} + "/jre/lib/fonts"
                 </openjfx.run.args>
             </properties>
             <dependencies>
